# maxmcp

./: .clang-format  .clang-tidy  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  build.sh  deploy.sh  install-package.sh  package-lock.json  package.json  release-please-config.json  test-mcp-connection.js
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: pre-commit
.claude/plans/: snazzy-scribbling-wirth.md  staged-jumping-sky.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-assets.yml  release-please.yml  security.yml
.husky/: pre-commit
bridge/: README.md  build.sh  package.json  websocket-mcp-bridge.js
bridge/test/: bridge.test.js
cmake/: fix_install_names.cmake
docs/: FEATURE_BRANCH_COMPARISON.md  FEATURE_BRANCH_JAPANESE_SUMMARY.md  FEATURE_BRANCH_TECHNICAL_DEEP_DIVE.md  FEATURE_OBJECT_TOOLS_ENHANCEMENTS_REPORT.md  IMPLEMENTATION_REVIEW.md  INDEX.md  PACKAGE_MANAGER_SUBMISSION.md  PHASE1_COMPLETION.md  PHASE1_INFRASTRUCTURE.md  PHASE2_COMPLETION.md  RELEASE_WORKFLOW.md  architecture.md  development-guide.md  e2e-test-results-phase2.md  implementation-plan.md  integration-test-checklist.md  layout-validation-tools-spec.md  manual-test-new-tools.md  manual-test-phase2.md  mcp-tools-reference.md  onboarding.md  quick-start.md  requirements.md  server-usage.md  specifications.md
docs/research/: README.md  defer-callback-memory-fix-2025-11-10.md  max-external-dylib-bundling-and-signing.md  mcp-protocol-fix-2025-11-10.md  phase2-e2e-websocket-fixes.md  websocket-library-selection.md
package/MaxMCP/: MaxMCP  README.md  package-info.json
package/MaxMCP/docs/refpages/: maxmcp.maxref.xml
package/MaxMCP/examples/: 00-index.maxpat  00-setup.maxpat  01-basic-registration.maxpat  01-claude-code-connection.maxpat  01-getting-started.maxpat  02-basic-client.maxpat  02-custom-alias.maxpat  02-synth-creation.maxpat  03-custom-alias.maxpat  03-group-assignment.maxpat  03-multi-patch.maxpat  04-effect-chain.maxpat  04-group-assignment.maxpat  04-multi-patch-synth1.maxpat  05-multi-patch-synth1.maxpat  05-multi-patch-synth2.maxpat  06-multi-patch-fx1.maxpat  06-multi-patch-synth2.maxpat  07-mcp-tools-test.maxpat  07-multi-patch-fx1.maxpat  08-server-groupfilter.maxpat  09-bridge-launch.maxpat
package/MaxMCP/help/: maxmcp.maxhelp
package/MaxMCP/patchers/: maxmcp-bridge.maxpat  maxmcp-server-test.maxpat
package/MaxMCP/plugins/maxmcp/: README.md
package/MaxMCP/plugins/maxmcp/.claude-plugin/: plugin.json
package/MaxMCP/plugins/maxmcp/skills/m4l-techniques/reference/: live-object-model.md  namespace-parameters.md
package/MaxMCP/plugins/maxmcp/skills/max-resources/: SKILL.md
package/MaxMCP/plugins/maxmcp/skills/max-resources/examples/: recreate-patch.md
package/MaxMCP/plugins/maxmcp/skills/max-resources/references/: maxpat-format.md  refpage-format.md
package/MaxMCP/plugins/maxmcp/skills/patch-guidelines/reference/: layout-rules.md  naming-conventions.md  object-internals.md
package/MaxMCP/support/: package.json
package/MaxMCP/support/bridge/: .eslintrc.json  .gitignore  README.md  bridge-launcher.js  npm-install.js  package-lock.json  package.json  websocket-mcp-bridge.js
package/MaxMCP/support/bridge/test/: bridge.test.js
plugins/maxmcp/: README.md
plugins/maxmcp/skills/m4l-techniques/: SKILL.md
plugins/maxmcp/skills/m4l-techniques/reference/: live-object-model.md  live-parameter-rules.md  lom-observer-patterns.md  lom-patterns.md  namespace-parameters.md  tips.md
plugins/maxmcp/skills/max-resources/: SKILL.md
plugins/maxmcp/skills/max-resources/examples/: lookup-object.md  recreate-patch.md
plugins/maxmcp/skills/max-resources/references/: maxpat-format.md  mcp-recreation.md  refpage-format.md  resource-paths.md
plugins/maxmcp/skills/max-resources/scripts/: build-index.sh  check-cache.sh  get-reference.sh  get-snippet.sh  list-examples.sh  search-fts.sh  search-objects.sh
plugins/maxmcp/skills/max-techniques/: SKILL.md
plugins/maxmcp/skills/max-techniques/reference/: bpatcher-techniques.md  cascading-init.md  pattr-parameters.md  poly-bpatcher.md  poly-techniques.md  tips.md
plugins/maxmcp/skills/organize-patch/: SKILL.md
plugins/maxmcp/skills/patch-guidelines/: SKILL.md
plugins/maxmcp/skills/patch-guidelines/reference/: architecture-patterns.md  execution-and-messaging.md  javascript-guide.md  layout-rules.md  mcp-notes.md  naming-conventions.md  object-internals.md  object-text-conventions.md  presentation-layout.md  visual-design.md
scripts/: prepare-release.sh
src/: maxmcp.cpp  maxmcp.h  maxmcp_server.cpp  maxmcp_server.h  mcp_server.cpp  mcp_server.h  udp_server.cpp  udp_server.h  websocket_server.cpp  websocket_server.h
src/tools/: connection_tools.cpp  connection_tools.h  hierarchy_tools.cpp  hierarchy_tools.h  layout_checks.cpp  layout_checks.h  layout_tools.cpp  layout_tools.h  object_tools.cpp  object_tools.h  patch_tools.cpp  patch_tools.h  screenshot_tools.h  screenshot_tools.mm  state_tools.cpp  state_tools.h  tool_common.cpp  tool_common.h  utility_tools.cpp  utility_tools.h
src/utils/: console_logger.cpp  console_logger.h  format_util.h  geometry.cpp  geometry.h  io_geometry.cpp  io_geometry.h  patch_helpers.cpp  patch_helpers.h  patch_registry.cpp  patch_registry.h  uuid_generator.cpp  uuid_generator.h
test-patches/: test1-basic-client.maxpat
tests/: CMakeLists.txt  README.md
tests/stubs/: maxmcp.h
tests/unit/: test_avoid_rect_position.cpp  test_console_logger.cpp  test_geometry.cpp  test_io_geometry.cpp  test_layout_validate.cpp  test_maxmcp_attributes.cpp  test_mcp_server.cpp  test_patch_helpers.cpp  test_patch_registry.cpp  test_tool_routing.cpp  test_uuid_generator.cpp  test_websocket_client.cpp  test_websocket_client.h  test_websocket_server.cpp
